--- a/easycomplex/platform/msvc2008/projects/easycomplex.vcproj
+++ b/easycomplex/platform/msvc2008/projects/easycomplex.vcproj
@@ -214,22 +214,14 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\src\easycomplex\Task.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\easycomplex\Task.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\..\editor-external\wx\include\wx\msw\wx.rc"
+			RelativePath="..\..\..\res\rc.rc"
 			>
 			<FileConfiguration
 				Name="Debug|Win32"
 				>
 				<Tool
 					Name="VCResourceCompilerTool"
-					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+					AdditionalIncludeDirectories="&quot;..\..\..\..\editor-external\wx\include&quot;"
 				/>
 			</FileConfiguration>
 			<FileConfiguration
@@ -237,9 +229,17 @@
 				>
 				<Tool
 					Name="VCResourceCompilerTool"
-					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+					AdditionalIncludeDirectories="&quot;..\..\..\..\editor-external\wx\include&quot;"
 				/>
 			</FileConfiguration>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easycomplex\Task.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easycomplex\Task.h"
+			>
 		</File>
 	</Files>
 	<Globals>
