[ADDED] sprite and symbol for template
Former-commit-id: 3d8009b2c4b0452b44b0e6fcf7cda08841402e5c

--- a/template/platform/msvc2008/projects/libtemplate.vcproj
+++ b/template/platform/msvc2008/projects/libtemplate.vcproj
@@ -204,6 +204,22 @@
 		<Filter
 			Name="dataset"
 			>
+			<File
+				RelativePath="..\..\..\src\libtemplate\Sprite.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libtemplate\Sprite.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libtemplate\Symbol.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libtemplate\Symbol.h"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath="..\..\..\src\libtemplate\config.h"
