[ADDED] sprite dialog
Former-commit-id: 4d572956e367cf64a911111e34e63e453ba61a69

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2185,6 +2185,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\view\SpriteDialog.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\SpriteDialog.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\view\TextDialog.cpp"
 					>
 				</File>
