--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1609,6 +1609,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\common\Timer.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\common\Timer.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\common\tools.h"
 					>
 				</File>
