--- a/easyterrain3d/platform/msvc2008/projects/libterrain3d.vcproj
+++ b/easyterrain3d/platform/msvc2008/projects/libterrain3d.vcproj
@@ -149,6 +149,10 @@
 			Name="demo"
 			>
 			<File
+				RelativePath="..\..\..\src\libterrain3d\IDemo.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libterrain3d\IDemo.h"
 				>
 			</File>
