--- a/easyshape/platform/msvc2008/projects/easyshape_new.vcproj
+++ b/easyshape/platform/msvc2008/projects/easyshape_new.vcproj
@@ -198,7 +198,7 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\..\editor-external\wx\include\wx.rc"
+			RelativePath="..\..\..\..\editor-external\wx\include\wx\msw\wx.rc"
 			>
 			<FileConfiguration
 				Name="Debug|Win32"
@@ -215,7 +215,7 @@
 					Name="VCResourceCompilerTool"
 					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
 				/>
-			</FileConfiguration>			
+			</FileConfiguration>
 		</File>
 	</Files>
 	<Globals>
