[CHANGED] shadow的shader单独放到eshadow里面，shader mgr里管理多个shapeshader
Former-commit-id: 64c7372e72c4bdbd5b1917de2fc1fa1d6ba28cd6

--- a/easyshadow/platform/msvc2008/projects/libshadow.vcproj
+++ b/easyshadow/platform/msvc2008/projects/libshadow.vcproj
@@ -253,6 +253,30 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="render"
+			>
+			<Filter
+				Name="shadow"
+				>
+				<File
+					RelativePath="..\..\..\src\libshadow\ShadowShader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libshadow\ShadowShader.frag"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libshadow\ShadowShader.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libshadow\ShadowShader.vert"
+					>
+				</File>
+			</Filter>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\libshadow\config.h"
 			>
