--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -328,6 +328,22 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="blur"
+				>
+				<File
+					RelativePath="..\..\..\src\libimage\BlurShader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libimage\BlurShader.frag"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libimage\BlurShader.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="process"
