[ADDED] blur to d2d
Former-commit-id: 581bda80e375ff18e56bab129ecc811f9ff46ee8

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1354,6 +1354,22 @@
 								>
 							</File>
 						</Filter>
+						<Filter
+							Name="blur"
+							>
+							<File
+								RelativePath="..\..\..\src\drag2d\render\BlurShader.cpp"
+								>
+							</File>
+							<File
+								RelativePath="..\..\..\src\drag2d\render\BlurShader.frag"
+								>
+							</File>
+							<File
+								RelativePath="..\..\..\src\drag2d\render\BlurShader.h"
+								>
+							</File>
+						</Filter>
 					</Filter>
 				</Filter>
 			</Filter>
