--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -445,6 +445,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\history\PerspectiveSpriteAOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\history\PerspectiveSpriteAOP.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\history\RotateSpriteAOP.cpp"
 					>
 				</File>
