[ADDED] perspective的鼠标操作
Former-commit-id: 774634300be1eb15f0df18e76337e5cb852e1292

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -232,6 +232,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\src\drag2d\operator\PerspectiveSpriteState.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\operator\PerspectiveSpriteState.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\drag2d\operator\RotateSpriteState.cpp"
 						>
 					</File>
