[ADDED] 完成ep3dinv
Former-commit-id: 7bfdfd4b915c32f4d7d9af0ce3bf452f877bbadf

--- a/easyp3dinv/platform/msvc2008/projects/libp3dinv.vcproj
+++ b/easyp3dinv/platform/msvc2008/projects/libp3dinv.vcproj
@@ -241,6 +241,18 @@
 				</File>
 			</Filter>
 		</Filter>
+		<Filter
+			Name="edit"
+			>
+			<File
+				RelativePath="..\..\..\src\libp3dinv\EditOP.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libp3dinv\EditOP.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\libp3dinv\config.h"
 			>
