[FIXED] scale9的property
Former-commit-id: 58adc73c228f645149df62429941d98b5480e9ec

--- a/easyscale9/platform/msvc2008/projects/easyscale9.vcproj
+++ b/easyscale9/platform/msvc2008/projects/easyscale9.vcproj
@@ -293,6 +293,26 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath="..\..\..\..\editor-external\wx\include\wx\msw\wx.rc"
+			>
+			<FileConfiguration
+				Name="Debug|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCResourceCompilerTool"
+					AdditionalIncludeDirectories="..\..\..\..\editor-external\wx\include"
+				/>
+			</FileConfiguration>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
