[FIXED] anim以模板的方式打开
Former-commit-id: 19a83ab3ee3fd967690c640440b7847778e7e777

--- a/easyanim/platform/msvc2008/projects/easyanimation.vcproj
+++ b/easyanim/platform/msvc2008/projects/easyanimation.vcproj
@@ -185,7 +185,11 @@
 			Name="dataset"
 			>
 			<File
-				RelativePath="..\..\..\src\easyanimation\dataset\ResourceMgr.h"
+				RelativePath="..\..\..\src\easyanimation\dataset\AnimTemplate.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easyanimation\dataset\AnimTemplate.h"
 				>
 			</File>
 			<Filter
