[ADDED] two pass里对editop的屏幕缓存
Former-commit-id: d1c42d6d0c2263df3bb13697bcb3aaa402aa119f

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1981,6 +1981,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\view\IEditOPMonitor.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\view\wrap_StagePanel.cpp"
 					>
 				</File>
@@ -2042,14 +2046,6 @@
 					<Filter
 						Name="base"
 						>
-						<File
-							RelativePath="..\..\..\src\drag2d\view\GLCanvas.cpp"
-							>
-						</File>
-						<File
-							RelativePath="..\..\..\src\drag2d\view\GLCanvas.h"
-							>
-						</File>
 						<File
 							RelativePath="..\..\..\src\drag2d\view\IStageCanvas.cpp"
 							>
