[FIXED] refresh monitor
Former-commit-id: 5c62c65dd6b4c8d4a9fa02b475b69829192022dc

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1981,7 +1981,7 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\drag2d\view\IEditOPMonitor.h"
+					RelativePath="..\..\..\src\drag2d\view\IRefreshMonitor.h"
 					>
 				</File>
 				<File
