[FIXED] image的texture使用裁剪后的
Former-commit-id: 95b3160a4b43f134b9fa78f5fddebfc02b4fab59

--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -357,6 +357,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libimage\ImageClipRaw.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\ImageClipRaw.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libimage\ImagePack.cpp"
 				>
 			</File>
@@ -370,6 +378,14 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\libimage\ImageTrim.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\ImageTrimRaw.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\ImageTrimRaw.h"
 				>
 			</File>
 			<File
