[CHANGED] 替换所有的wxGetKeyState
Former-commit-id: eb5fd070dbd8f803c5cdaff5f2557d789dd04dc5

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2013,6 +2013,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\view\KeysState.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\KeysState.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\view\wrap_StagePanel.cpp"
 					>
 				</File>
