--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -657,6 +657,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\dataset\ImageData.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\dataset\ImageData.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\dataset\ImageLoader.cpp"
 					>
 				</File>
