--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2273,19 +2273,19 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\view\ConfirmDialog.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\ConfirmDialog.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\view\ExceptionDlg.cpp"
 					>
 				</File>
 				<File
 					RelativePath="..\..\..\src\drag2d\view\ExceptionDlg.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\drag2d\view\ExitDlg.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\drag2d\view\ExitDlg.h"
 					>
 				</File>
 				<File
