[FIXED] packcoco tp 拼上dir路径
Former-commit-id: 99d4eec558ea6850385ce4e546b7770a2d0a5d96

--- a/coceditor/platform/msvc2008/projects/libcoco.vcproj
+++ b/coceditor/platform/msvc2008/projects/libcoco.vcproj
@@ -230,6 +230,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\src\libcoco\SymbolSet.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\libcoco\SymbolSet.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\libcoco\Utility.cpp"
 			>
 		</File>
