[ADDED] test async
Former-commit-id: 3f1ef0e795577e6a8586d6e29a614cc73f295ec5

--- a/easyejoy2d/platform/msvc2008/projects/testdtex.vcproj
+++ b/easyejoy2d/platform/msvc2008/projects/testdtex.vcproj
@@ -261,6 +261,14 @@
 				Name="normal"
 				>
 				<File
+					RelativePath="..\..\..\src\testdtex\TestAsync.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\testdtex\TestAsync.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\testdtex\TestC2.cpp"
 					>
 				</File>
