[ADDED] lr packer
Former-commit-id: 2b723e3ece871e4f0c706a117913c354d777f470

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -560,6 +560,14 @@
 				<Filter
 					Name="lr"
 					>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\LRPacker.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\LRPacker.h"
+						>
+					</File>
 					<Filter
 						Name="extern"
 						>
