[ADDED] pack texture
Former-commit-id: 204eeb828b14b4eb7c604a590b1198106c7e8370

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -253,6 +253,14 @@
 			<Filter
 				Name="pack"
 				>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\PackTexture.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\PackTexture.h"
+					>
+				</File>
 				<Filter
 					Name="particle"
 					>
