[ADDED] draw select rect op
Former-commit-id: e4cd1b393f6a4ac0263d6b58a9232467c666c3be

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -292,6 +292,14 @@
 					RelativePath="..\..\..\src\drag2d\operator\DrawRectangleOP.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\operator\DrawSelectRectOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\operator\DrawSelectRectOP.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="other"
