[FIXED] rect pack
Former-commit-id: 05d5b7eeec8d0cb46b6eefade88440f302ded51e

--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -204,6 +204,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\libimage\PixelUncoveredLUT.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libimage\PixelUncoveredLUT.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libimage\Rect.h"
 					>
 				</File>
@@ -217,6 +225,14 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\libimage\RectPostProcessor.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libimage\RegularRectCondense.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libimage\RegularRectCondense.h"
 					>
 				</File>
 				<File
