[FIXED] rect cut
Former-commit-id: 0be157478be7e169b84f67812266621067c6b4c7

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -449,6 +449,14 @@
 					Name="cut"
 					>
 					<File
+						RelativePath="..\..\..\src\easydb_cl\RectCutWithJson.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\RectCutWithJson.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\easydb_cl\RegularRectCut.cpp"
 						>
 					</File>
@@ -486,6 +494,18 @@
 					</File>
 					<File
 						RelativePath="..\..\..\src\easydb_cl\BlockCompress.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="statistics"
+					>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\CalculateImageArea.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\CalculateImageArea.h"
 						>
 					</File>
 				</Filter>
