--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2685,6 +2685,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="panel"
+				>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\ImagePanel.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\ImagePanel.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="algorithms"
