[ADDED] p3d的sphere rotate
Former-commit-id: 2cd6c21a29ac91a67762256782f4646c5e91ff25

--- a/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
+++ b/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
@@ -309,11 +309,27 @@
 			Name="editop"
 			>
 			<File
+				RelativePath="..\..\..\src\libcomplex\ArrangeSpriteImpl.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcomplex\ArrangeSpriteImpl.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libcomplex\SelectSpritesOP.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\..\..\src\libcomplex\SelectSpritesOP.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcomplex\SphereRotateState.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcomplex\SphereRotateState.h"
 				>
 			</File>
 		</Filter>
