[ADDED] LRExpansion处理base filepath的情况
Former-commit-id: 1ed024a04312b4b7d9c8e3ecf0cd2f665e54558c

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -620,6 +620,14 @@
 						Name="base"
 						>
 						<File
+							RelativePath="..\..\..\src\easydb_cl\LRExpansion.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\easydb_cl\LRExpansion.h"
+							>
+						</File>
+						<File
 							RelativePath="..\..\..\src\easydb_cl\LRLayersPack.cpp"
 							>
 						</File>
