--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -354,14 +354,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\lr\dataset\Layer.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\lr\dataset\Layer.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\src\lr\dataset\Quadtree.cpp"
 				>
 			</File>
@@ -377,6 +369,30 @@
 				RelativePath="..\..\..\src\lr\dataset\SpatialIndex.h"
 				>
 			</File>
+			<Filter
+				Name="layer"
+				>
+				<File
+					RelativePath="..\..\..\src\lr\dataset\Layer.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\dataset\Layer.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\dataset\layer_type.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\dataset\ShapeLayer.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\dataset\ShapeLayer.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="preview"
